@@ -20,25 +20,15 @@
 package org.zaproxy.zap.extension.openapi.generators;
 
 import io.swagger.v3.oas.models.examples.Example;
-import io.swagger.v3.oas.models.media.ArraySchema;
-import io.swagger.v3.oas.models.media.BooleanSchema;
 import io.swagger.v3.oas.models.media.Content;
-import io.swagger.v3.oas.models.media.DateSchema;
-import io.swagger.v3.oas.models.media.DateTimeSchema;
-import io.swagger.v3.oas.models.media.FileSchema;
-import io.swagger.v3.oas.models.media.IntegerSchema;
-import io.swagger.v3.oas.models.media.MapSchema;
-import io.swagger.v3.oas.models.media.NumberSchema;
 import io.swagger.v3.oas.models.media.Schema;
-import io.swagger.v3.oas.models.media.StringSchema;
 import io.swagger.v3.oas.models.parameters.Parameter;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import org.zaproxy.zap.extension.openapi.OpenApiSchemaTypeUtils;
 
 public class DataGenerator {
 
@@ -48,26 +38,25 @@ public class DataGenerator {
         this.generators = generators;
     }
 
-    @SuppressWarnings("serial")
     private static final Map<String, String> TYPES =
-            Collections.unmodifiableMap(
-                    new HashMap<String, String>() {
-                        {
-                            put("integer", "10");
-                            put("number", "1.2");
-                            put("string", "\"John Doe\"");
-                            put("boolean", "true");
-                        }
-                    });
+            Map.of(
+                    OpenApiSchemaTypeUtils.TYPE_INTEGER,
+                    "10",
+                    OpenApiSchemaTypeUtils.TYPE_NUMBER,
+                    "1.2",
+                    OpenApiSchemaTypeUtils.TYPE_STRING,
+                    "\"John Doe\"",
+                    OpenApiSchemaTypeUtils.TYPE_BOOLEAN,
+                    "true");
 
     public boolean isSupported(Schema<?> schema) {
-        return schema instanceof ArraySchema
-                || schema instanceof BooleanSchema
-                || schema instanceof FileSchema
-                || schema instanceof IntegerSchema
-                || schema instanceof MapSchema
-                || schema instanceof NumberSchema
-                || schema instanceof StringSchema;
+        String type = OpenApiSchemaTypeUtils.getType(schema);
+        return OpenApiSchemaTypeUtils.isArray(schema)
+                || OpenApiSchemaTypeUtils.TYPE_BOOLEAN.equals(type)
+                || OpenApiSchemaTypeUtils.TYPE_INTEGER.equals(type)
+                || OpenApiSchemaTypeUtils.TYPE_NUMBER.equals(type)
+                || OpenApiSchemaTypeUtils.TYPE_STRING.equals(type)
+                || OpenApiSchemaTypeUtils.isMap(schema);
     }
 
     public String generate(String name, Parameter parameter) {
@@ -132,42 +121,18 @@ public class DataGenerator {
             return getExampleValue(parameter);
         }
 
-        if (isArray(Generators.getType(parameter.getSchema()))) {
-            return generateArrayValue(name, parameter);
-        }
-
-        if (parameter.getSchema() instanceof ArraySchema) {
-            Schema<?> items = ((ArraySchema) (parameter.getSchema())).getItems();
-            if (items != null) {
-                return generateValue(name, items, isPath(parameter.getIn()));
-            }
+        if (OpenApiSchemaTypeUtils.isArray(parameter.getSchema())) {
+            return generators.getArrayGenerator().generate(name, parameter.getSchema(), true);
         }
 
         return getExampleValue(parameter);
     }
 
-    private String generateArrayValue(String name, Parameter parameter) {
-        boolean isPath = isPath(parameter.getIn());
-        if (!(parameter.getSchema() instanceof ArraySchema
-                && ((ArraySchema) parameter.getSchema()).getItems() instanceof ArraySchema)) {
-            return generateValue(name, ((ArraySchema) parameter.getSchema()).getItems(), isPath);
-        }
-        return generators
-                .getArrayGenerator()
-                .generate(
-                        name,
-                        ((ArraySchema) ((ArraySchema) parameter.getSchema()).getItems()),
-                        "",
-                        isPath);
-    }
-
     public String generateBodyValue(String name, Schema<?> property) {
-        if (isArray(property)) {
-            return generators
-                    .getArrayGenerator()
-                    .generate(name, (ArraySchema) property, "csv", false);
+        if (OpenApiSchemaTypeUtils.isArray(property)) {
+            return generators.getArrayGenerator().generate(name, property, false);
         }
-        if (isMap(property)) {
+        if (OpenApiSchemaTypeUtils.isMap(property)) {
             if (property.getAdditionalProperties() instanceof Schema) {
                 return generators.getMapGenerator().generate(TYPES, property);
             } else if (property.getProperties() != null && !property.getProperties().isEmpty()) {
@@ -185,22 +150,22 @@ public class DataGenerator {
         if (value == null || value.isEmpty()) {
             if (schema.getExample() != null) {
                 value = schema.getExample().toString();
-            } else if (isDateTime(schema)) {
+            } else if (OpenApiSchemaTypeUtils.isDateTime(schema)) {
                 value = "1970-01-01T00:00:00.001Z";
-            } else if (isDate(schema)) {
+            } else if (OpenApiSchemaTypeUtils.isDate(schema)) {
                 value = "1970-01-01";
             } else {
                 value = "";
             }
         }
 
-        String type = Generators.getType(schema);
+        String type = OpenApiSchemaTypeUtils.getType(schema);
         value = generators.getValueGenerator().getValue(name, type, value);
 
         if (value.isEmpty()) {
             value = getExampleValue(isPath, type, name);
         } else {
-            if (!isPath && "string".equalsIgnoreCase(type)) {
+            if (!isPath && OpenApiSchemaTypeUtils.TYPE_STRING.equalsIgnoreCase(type)) {
                 value = "\"" + value + "\"";
             }
         }
@@ -212,8 +177,8 @@ public class DataGenerator {
 
     private String getExampleValue(Parameter parameter) {
         String in = parameter.getIn();
-        String type = Generators.getType(parameter.getSchema());
-        if ("cookie".equals(in) && "string".equals(type)) {
+        String type = OpenApiSchemaTypeUtils.getType(parameter.getSchema());
+        if ("cookie".equals(in) && OpenApiSchemaTypeUtils.TYPE_STRING.equals(type)) {
             return "JohnDoe";
         }
         return getExampleValue(isPath(in), type, parameter.getName());
@@ -228,12 +193,8 @@ public class DataGenerator {
 
     public String generateExampleValueForPath(String type, String name) {
         String value;
-        if ("string".equals(type)) {
-            if (name != null) {
-                value = name;
-            } else {
-                value = "Test";
-            }
+        if (OpenApiSchemaTypeUtils.TYPE_STRING.equals(type)) {
+            value = Objects.requireNonNullElse(name, "Test");
         } else {
             value = generateSimpleExampleValue(type);
         }
@@ -241,31 +202,11 @@ public class DataGenerator {
     }
 
     private String generateSimpleExampleValue(String type) {
-        return TYPES.get(type);
+        return type != null ? TYPES.get(type) : "";
     }
 
     public boolean isPath(String type) {
-        return type.equals("query") || type.equals("path");
-    }
-
-    public boolean isArray(String type) {
-        return "array".equals(type);
-    }
-
-    private static boolean isArray(Schema<?> schema) {
-        return schema instanceof ArraySchema;
-    }
-
-    public boolean isDateTime(Schema<?> schema) {
-        return schema instanceof DateTimeSchema;
-    }
-
-    public boolean isDate(Schema<?> schema) {
-        return schema instanceof DateSchema;
-    }
-
-    private static boolean isMap(Schema<?> schema) {
-        return schema instanceof MapSchema;
+        return "query".equals(type) || "path".equals(type);
     }
 
     public Generators getGenerators() {
